# Inference_offline

./: .gitignore  CMakeLists.txt  README.md  cfnet_inference.py  compare.py  fnet_forward_offline.cpp  gather.cpp  test_forward_offline  test_forward_offline.cpp  test_gather.cpp  trash
MYGATHER/: CMakeLists.txt  Mygather.cpp  Mygather.h
common/: myCnml.cpp
common/include/: myCnml.h
pyfile/: cfnet_inference.py  inference.py  inference_all.py  load_data.py  submodule.py
